dataset1235/2025-2/1153765216/users/3623738290/executions/2747719322_775838323.log
== RUN (2025-08-19 19:19:33)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 19:26:14)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3)/3
print(m)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:10:57)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
12
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:09:29)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2=n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=n1+n2=n3/3
      ^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=n1+n2=n3/3
      ^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:19:29)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:11:50)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3//3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:10:51)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:11:09)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:08:33)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2=n3/3)
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=(n1+n2=n3/3)
       ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=(n1+n2=n3/3)
       ^^^^^
SyntaxError: cannot assign to expression here. Maybe you meant '==' instead of '='?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:07:54)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2=n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=n1+n2=n3/3
      ^^^^^
SyntaxError: cannot assign to expression
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=n1+n2=n3/3
      ^^^^^
SyntaxError: cannot assign to expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:19:28)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:20:34)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:26:01)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3)/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
4.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:20:30)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/4
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
9.75
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
9.75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:19:25)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:15:14)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3/3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:11:03)
-- CODE: 
n1=5
n2=4
n3=3
m=n1+n2+n3//
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=n1+n2+n3//
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=n1+n2+n3//
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:16:09)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3/)3
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=(n1+n2+n3/)3
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
-- ERROR:
File "XXXX", line 4
    m=(n1+n2+n3/)3
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 19:16:18)
-- CODE: 
n1=5
n2=4
n3=3
m=(n1+n2+n3/3)
print(m)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
-- TEST CASE 2:
---- input:
1
---- correct output:
4.0
---- user output:
10.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
